k8s/observability-istio-gateway.yaml
# Шлюз Istio
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: observability
spec:
  selector:
    istio: ingressgateway   # use istio default ingress gateway
  servers:
    - port:
        number: 80
        name: jaeger
        protocol: HTTP
      hosts:
        - "jaeger.k3s.dev.com"
    - port:
        number: 80
        name: prometheus
        protocol: HTTP
      hosts:
        - "prometheus.k3s.dev.com"
    - port:
        number: 80
        name: grafana
        protocol: HTTP
      hosts:
        - "grafana.k3s.dev.com"
    - port:
        number: 80
        name: graylog
        protocol: HTTP
      hosts:
        - "graylog.k3s.dev.com"
